--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -1,7 +1,38 @@
 body {
     background-color: black;
+    text-align: center;
 }
 
 h1, h2, p {
     color: white;
+    font-family: Verdana;
+}
+
+h1 {
+    font-weight: normal;
+    font-size: 50px;
+}
+
+h2 {
+    font-weight: 300;
+    font-size: 42px;
+}
+
+a {
+    color: aquamarine;
+    font-size: 16px;
+}
+
+#video p {
+    color: gray;
+    font-size: 21px;
+}
+
+footer {
+    text-align: right;
+    color: gray;
+}
+
+img {
+    padding: 10px;
 }
